# the-walking-dev

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: analyze_wav.py  check_state.py  debug_evening.py  dump_episode.py  extract_clone_ref.py  install_omnivoice.ps1  make_demo.py  ovh_setup_subdomain.py  preview_tasks_layout.py  probe_sftp.py  rerender_today.py  reset_project.py  run_bot_hidden.vbs  schedule_bot.ps1  schedule_task.ps1  send_preview_tasks.py  set_cover.py  smoke_test.py  spike_omnivoice.py  test_clone.py  test_engine.py  test_evening_questions.py  test_news.py  test_packaging.py  test_publish_ftp.py  test_writer.py  verify_telegram.py  verify_urls.py
tests/: conftest.py  test_channel_cli.py  test_config.py  test_feed.py  test_hosting_local.py  test_llm_backends.py  test_misc.py  test_news.py  test_prompt.py  test_state.py  test_tts_split.py
voices/: README.md
walkingdev/: __init__.py  audio_encode.py  cli.py  config.py  doctor.py  evening_questions.py  llm.py  news.py  questions.py  tasks.py
walkingdev/channels/: __init__.py  base.py  cli.py  telegram.py
walkingdev/hosting/: __init__.py  base.py  feed.py  ftp.py  local.py  s3.py
walkingdev/knowledge/: __init__.py  base.py  local.py  obsidian.py
walkingdev/pipeline/: nightly.py
walkingdev/state/: __init__.py  base.py  sqlite.py
walkingdev/tts/: __init__.py  base.py  omnivoice.py
walkingdev/writer/: __init__.py  api.py  base.py  claude_code.py  local.py  prompt.py
